ideas-synopsis-common/src/main/java/es/us/isa/ideas/synopsis/common/pref/parser/NeedsParser.java
// Generated from C:\Users\ISA Group\Desktop\Parsers\Synopsis-parser\Needs.g4 by ANTLR 4.1
package es.us.isa.ideas.synopsis.common.pref.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NeedsParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NEEDS=1, ITEMS=2, REQUIREMENTS=3, PREFERENCES=4, INTEGER=5, FLOAT=6, BOOLEAN=7, 
		SET=8, ENUM=9, TRUE=10, FALSE=11, ON=12, SUM=13, MIN=14, MAX=15, FAVORITES=16, 
		DISLIKES=17, HIGHEST=18, LOWEST=19, AROUND=20, CA=21, CC=22, PA=23, PC=24, 
		LLA=25, LLC=26, DP=27, PyC=28, COMA=29, DOT=30, AND=31, OR=32, NOT=33, 
		IMPLIES=34, REQUIRES=35, IFF=36, EXCLUDES=37, PLUS=38, HYPHEN=39, ASTERISK=40, 
		SLASH=41, LT=42, GT=43, EQ=44, NEQ=45, LTE=46, GTE=47, ASSIG=48, Identifier=49, 
		String=50, Integer=51, S_Integer=52, Float=53, S_Float=54, Boolean=55, 
		WS=56, COMMENT=57, LINE_COMMENT=58;
	public static final String[] tokenNames = {
		"<INVALID>", "'Needs'", "'%Items'", "'%Requirements'", "'%Preferences'", 
		"'int'", "'real'", "'boolean'", "'set'", "'enum'", "'true'", "'false'", 
		"'on'", "'sum'", "'min'", "'max'", "'Favorites'", "'Dislikes'", "'Highest'", 
		"'Lowest'", "'Around'", "'['", "']'", "'('", "')'", "'{'", "'}'", "':'", 
		"';'", "','", "'.'", "'&&'", "'||'", "'!'", "'->'", "'REQUIRES'", "'IFF'", 
		"'EXCLUDES'", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'=='", "'!='", 
		"'<='", "'>='", "'='", "Identifier", "String", "Integer", "S_Integer", 
		"Float", "S_Float", "Boolean", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final int
		RULE_entry = 0, RULE_needs_definition = 1, RULE_items = 2, RULE_requirements = 3, 
		RULE_preferences = 4, RULE_property = 5, RULE_parameters = 6, RULE_requirement = 7, 
		RULE_preference = 8, RULE_item_term = 9, RULE_expression = 10, RULE_list = 11, 
		RULE_array = 12, RULE_args = 13, RULE_atom = 14;
	public static final String[] ruleNames = {
		"entry", "needs_definition", "items", "requirements", "preferences", "property", 
		"parameters", "requirement", "preference", "item_term", "expression", 
		"list", "array", "args", "atom"
	};

	@Override
	public String getGrammarFileName() { return "Needs.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public NeedsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class EntryContext extends ParserRuleContext {
		public Token service_id;
		public TerminalNode ON() { return getToken(NeedsParser.ON, 0); }
		public TerminalNode NEEDS() { return getToken(NeedsParser.NEEDS, 0); }
		public TerminalNode LLA() { return getToken(NeedsParser.LLA, 0); }
		public TerminalNode Identifier() { return getToken(NeedsParser.Identifier, 0); }
		public TerminalNode LLC() { return getToken(NeedsParser.LLC, 0); }
		public Needs_definitionContext needs_definition() {
			return getRuleContext(Needs_definitionContext.class,0);
		}
		public EntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entry; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitEntry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntryContext entry() throws RecognitionException {
		EntryContext _localctx = new EntryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_entry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30); match(NEEDS);
			setState(31); match(ON);
			setState(32); ((EntryContext)_localctx).service_id = match(Identifier);
			setState(33); match(LLA);
			setState(34); needs_definition();
			setState(35); match(LLC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Needs_definitionContext extends ParserRuleContext {
		public ItemsContext items() {
			return getRuleContext(ItemsContext.class,0);
		}
		public PreferencesContext preferences() {
			return getRuleContext(PreferencesContext.class,0);
		}
		public RequirementsContext requirements() {
			return getRuleContext(RequirementsContext.class,0);
		}
		public Needs_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_needs_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitNeeds_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Needs_definitionContext needs_definition() throws RecognitionException {
		Needs_definitionContext _localctx = new Needs_definitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_needs_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37); items();
			setState(38); requirements();
			setState(39); preferences();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ItemsContext extends ParserRuleContext {
		public TerminalNode ITEMS() { return getToken(NeedsParser.ITEMS, 0); }
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public ItemsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_items; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitItems(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ItemsContext items() throws RecognitionException {
		ItemsContext _localctx = new ItemsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_items);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); match(ITEMS);
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(42); property();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequirementsContext extends ParserRuleContext {
		public TerminalNode REQUIREMENTS() { return getToken(NeedsParser.REQUIREMENTS, 0); }
		public RequirementContext requirement(int i) {
			return getRuleContext(RequirementContext.class,i);
		}
		public List<RequirementContext> requirement() {
			return getRuleContexts(RequirementContext.class);
		}
		public RequirementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirements; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitRequirements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RequirementsContext requirements() throws RecognitionException {
		RequirementsContext _localctx = new RequirementsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_requirements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); match(REQUIREMENTS);
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << SUM) | (1L << MIN) | (1L << MAX) | (1L << CA) | (1L << PA) | (1L << LLA) | (1L << NOT) | (1L << Identifier) | (1L << String) | (1L << Integer) | (1L << S_Integer) | (1L << Float) | (1L << S_Float))) != 0)) {
				{
				{
				setState(49); requirement();
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreferencesContext extends ParserRuleContext {
		public PreferenceContext preference(int i) {
			return getRuleContext(PreferenceContext.class,i);
		}
		public List<PreferenceContext> preference() {
			return getRuleContexts(PreferenceContext.class);
		}
		public TerminalNode PREFERENCES() { return getToken(NeedsParser.PREFERENCES, 0); }
		public PreferencesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preferences; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitPreferences(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreferencesContext preferences() throws RecognitionException {
		PreferencesContext _localctx = new PreferencesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_preferences);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); match(PREFERENCES);
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FAVORITES) | (1L << DISLIKES) | (1L << HIGHEST) | (1L << LOWEST) | (1L << AROUND))) != 0)) {
				{
				{
				setState(56); preference();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyContext extends ParserRuleContext {
		public Token id;
		public ParametersContext params;
		public TerminalNode PyC() { return getToken(NeedsParser.PyC, 0); }
		public TerminalNode CC() { return getToken(NeedsParser.CC, 0); }
		public TerminalNode CA() { return getToken(NeedsParser.CA, 0); }
		public ParametersContext parameters(int i) {
			return getRuleContext(ParametersContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(NeedsParser.COMA); }
		public TerminalNode Identifier() { return getToken(NeedsParser.Identifier, 0); }
		public List<ParametersContext> parameters() {
			return getRuleContexts(ParametersContext.class);
		}
		public TerminalNode COMA(int i) {
			return getToken(NeedsParser.COMA, i);
		}
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_property);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); ((PropertyContext)_localctx).id = match(Identifier);
			setState(63); match(CA);
			setState(64); ((PropertyContext)_localctx).params = parameters();
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(65); match(COMA);
				setState(66); ((PropertyContext)_localctx).params = parameters();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72); match(CC);
			setState(73); match(PyC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public TerminalNode String() { return getToken(NeedsParser.String, 0); }
		public TerminalNode Integer() { return getToken(NeedsParser.Integer, 0); }
		public TerminalNode S_Float() { return getToken(NeedsParser.S_Float, 0); }
		public TerminalNode Float() { return getToken(NeedsParser.Float, 0); }
		public TerminalNode S_Integer() { return getToken(NeedsParser.S_Integer, 0); }
		public TerminalNode Identifier() { return getToken(NeedsParser.Identifier, 0); }
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Identifier) | (1L << String) | (1L << Integer) | (1L << S_Integer) | (1L << Float) | (1L << S_Float))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequirementContext extends ParserRuleContext {
		public TerminalNode PyC() { return getToken(NeedsParser.PyC, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public RequirementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitRequirement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RequirementContext requirement() throws RecognitionException {
		RequirementContext _localctx = new RequirementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_requirement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); expression(0);
			setState(78); match(PyC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreferenceContext extends ParserRuleContext {
		public Token method;
		public TerminalNode PyC() { return getToken(NeedsParser.PyC, 0); }
		public TerminalNode FAVORITES() { return getToken(NeedsParser.FAVORITES, 0); }
		public Item_termContext item_term() {
			return getRuleContext(Item_termContext.class,0);
		}
		public TerminalNode LOWEST() { return getToken(NeedsParser.LOWEST, 0); }
		public TerminalNode PA() { return getToken(NeedsParser.PA, 0); }
		public TerminalNode COMA() { return getToken(NeedsParser.COMA, 0); }
		public TerminalNode DISLIKES() { return getToken(NeedsParser.DISLIKES, 0); }
		public TerminalNode PC() { return getToken(NeedsParser.PC, 0); }
		public TerminalNode AROUND() { return getToken(NeedsParser.AROUND, 0); }
		public TerminalNode HIGHEST() { return getToken(NeedsParser.HIGHEST, 0); }
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public PreferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preference; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitPreference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreferenceContext preference() throws RecognitionException {
		PreferenceContext _localctx = new PreferenceContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_preference);
		int _la;
		try {
			setState(122);
			switch (_input.LA(1)) {
			case FAVORITES:
				enterOuterAlt(_localctx, 1);
				{
				setState(80); ((PreferenceContext)_localctx).method = match(FAVORITES);
				setState(81); match(PA);
				setState(82); item_term();
				setState(85);
				_la = _input.LA(1);
				if (_la==COMA) {
					{
					setState(83); match(COMA);
					setState(84); atom();
					}
				}

				setState(87); match(PC);
				setState(88); match(PyC);
				}
				break;
			case DISLIKES:
				enterOuterAlt(_localctx, 2);
				{
				setState(90); ((PreferenceContext)_localctx).method = match(DISLIKES);
				setState(91); match(PA);
				setState(92); item_term();
				setState(95);
				_la = _input.LA(1);
				if (_la==COMA) {
					{
					setState(93); match(COMA);
					setState(94); atom();
					}
				}

				setState(97); match(PC);
				setState(98); match(PyC);
				}
				break;
			case HIGHEST:
				enterOuterAlt(_localctx, 3);
				{
				setState(100); ((PreferenceContext)_localctx).method = match(HIGHEST);
				setState(101); match(PA);
				setState(102); item_term();
				setState(103); match(PC);
				setState(104); match(PyC);
				}
				break;
			case LOWEST:
				enterOuterAlt(_localctx, 4);
				{
				setState(106); ((PreferenceContext)_localctx).method = match(LOWEST);
				setState(107); match(PA);
				setState(108); item_term();
				setState(109); match(PC);
				setState(110); match(PyC);
				}
				break;
			case AROUND:
				enterOuterAlt(_localctx, 5);
				{
				setState(112); ((PreferenceContext)_localctx).method = match(AROUND);
				setState(113); match(PA);
				setState(114); item_term();
				setState(117);
				_la = _input.LA(1);
				if (_la==COMA) {
					{
					setState(115); match(COMA);
					setState(116); atom();
					}
				}

				setState(119); match(PC);
				setState(120); match(PyC);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Item_termContext extends ParserRuleContext {
		public Token alias;
		public Token service_id;
		public Token feature;
		public TerminalNode String() { return getToken(NeedsParser.String, 0); }
		public TerminalNode CC() { return getToken(NeedsParser.CC, 0); }
		public TerminalNode DOT() { return getToken(NeedsParser.DOT, 0); }
		public TerminalNode CA() { return getToken(NeedsParser.CA, 0); }
		public TerminalNode Identifier(int i) {
			return getToken(NeedsParser.Identifier, i);
		}
		public List<TerminalNode> Identifier() { return getTokens(NeedsParser.Identifier); }
		public Item_termContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_item_term; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitItem_term(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Item_termContext item_term() throws RecognitionException {
		Item_termContext _localctx = new Item_termContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_item_term);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124); ((Item_termContext)_localctx).alias = match(Identifier);
			setState(130);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(125); match(CA);
				setState(126); ((Item_termContext)_localctx).service_id = match(String);
				setState(127); match(CC);
				setState(128); match(DOT);
				setState(129); ((Item_termContext)_localctx).feature = match(Identifier);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public int _p;
		public ExpressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ExpressionContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
			this._p = ctx._p;
		}
	}
	public static class AndExprContext extends ExpressionContext {
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode AND() { return getToken(NeedsParser.AND, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public AndExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitAndExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ListExprContext extends ExpressionContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ListExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitListExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MaxExprContext extends ExpressionContext {
		public TerminalNode PA() { return getToken(NeedsParser.PA, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode MAX() { return getToken(NeedsParser.MAX, 0); }
		public TerminalNode PC() { return getToken(NeedsParser.PC, 0); }
		public MaxExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitMaxExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtomExprContext extends ExpressionContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public AtomExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitAtomExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AdditiveExprContext extends ExpressionContext {
		public Token op;
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode HYPHEN() { return getToken(NeedsParser.HYPHEN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode PLUS() { return getToken(NeedsParser.PLUS, 0); }
		public AdditiveExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitAdditiveExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IffExprContext extends ExpressionContext {
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode IFF() { return getToken(NeedsParser.IFF, 0); }
		public IffExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitIffExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArrayExprContext extends ExpressionContext {
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public ArrayExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitArrayExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MultiplicationExprContext extends ExpressionContext {
		public Token op;
		public TerminalNode ASTERISK() { return getToken(NeedsParser.ASTERISK, 0); }
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode SLASH() { return getToken(NeedsParser.SLASH, 0); }
		public MultiplicationExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitMultiplicationExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrExprContext extends ExpressionContext {
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode OR() { return getToken(NeedsParser.OR, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public OrExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitOrExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssigExprContext extends ExpressionContext {
		public TerminalNode Identifier() { return getToken(NeedsParser.Identifier, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ASSIG() { return getToken(NeedsParser.ASSIG, 0); }
		public AssigExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NeedsVisitor ) return ((NeedsVisitor<? extends T>)visitor).visitAssigExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParExprContext extends ExpressionContext {
		public TerminalNode PA() { return getToken(NeedsParser.PA, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PC() { return getToken(NeedsParser.PC, 0); }
